#AUTHOR: "AtomicGamer9523"@github.com
#LICENSE: "MIT"
#FORMAT: "TOML"
[package]
edition = "2018"
version = "0.1.2"
readme = "README.md"
name = "hyperhasher"
keywords = ["blockchain", "light"]
license = "MIT"
description = "A VERY light blockchain library"
homepage = "https://github.com/AtomicGamer9523/Hyperhasher"
repository = "https://github.com/AtomicGamer9523/Hyperhasher"
categories = ["cryptography", "cryptography::cryptocurrencies"]
documentation = "https://github.com/AtomicGamer9523/Hyperhasher/blob/main/docs/index.md"

# To Exclude JS files
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
blake3 = "1.3.1"